    - Add create_media_metadata endpoint endpoint (AnnMary Mathew)

4.01010 2014-03-25
    - Replace missing POD file

4.01009 2015-03-24
    - Added Application-Only Authentication via trait AppAuth

4.01008 2015-01-19
    - Added REST API mithods muting, create_mute, destroy_mute (Ashley Willis)

4.01007 2015-01-07
    - Added REST API method lookup_statuses (thanks SocialFlow)
    - Typo fixes (thanks Zaki Mughal)
    - Bumped IO::Socket::SSL requirement to 2.005; recent versions seem to fix
      an issue with stalled connections.

4.01006 2014-11-17
    - Default `ssl => 1`
    - Added `mutes` (@pjcj on Github)

4.01005 2014-08-12
    - Added upload_media for multi-image support (@ghathwar)

4.01004 2014-04-11
    - PUT requires paramters in the message body, now (Samuel Kaufman)

4.01003 2014-03-12
    - Net::Twitter::Error's twitter_error_text excludes stack trace line number

4.01002 2014-01-16
    - Fix POD bugs

4.01001 2014-01-16
    - Warn if ssl option to new is not passed (deprecation cycle)

4.01000 2013-11-19
    - Add API method retweeters_ids
    - Fix update_with_media with utf8 status (RT#72814)
    - Expand Carp::Clan list (should resolve RT#77306)
    - Remove reliance on MooseX::Aliases (issue #35)
    - Use Class::Load to replace deprecated Class::Mop method (issue #35)
    - Add missing dependency: LWP::Protocol::https (issue #25)
    - Fix OAuth failure for UTF8 params (issue #21)

4.00007 2013-08-12
    - Support for HTTP method PUT (sartak)
    - example improvements (clmh)

4.00006 2013-05-30
    - Spelling error fixed (spazm@github)
    - Added path_suffix parameter to twitter_api_method (sartak)
    - tidy + pod fix (sartak)

4.00005 2013-04-25
    - Added list_ownerships (eleniS no Github)
    - Removed Makefile.PL (cruft - using Module::Build, now)

4.00004
    - Dependecy Net::HTTP fixed in 6.06 (30 second timeout in OAuth requests)

4.00003
    - Fixed URI argument encoding (v1.1 is more stringent)

4.00002 2013-02-23