@@ -821,6 +821,8 @@ Samuel Kaufman (ediblenergy on Github)
 
 AnnMary Mathew (ammathew on Github)
 
+Olaf Alders (oalders on Github)
+
 =head1 LICENSE
 
 Copyright (c) 2009-2014 Marc Mims
